--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "typeRoots": ["./types"]
 }
