--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-navigation": "^3.4.0",
     "@types/react-redux": "^7.1.22",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
