change app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "canada_stack_overflow",
+    "name": "Canada Stack Overflow",
     "slug": "canada_stack_overflow",
     "version": "1.0.0",
     "orientation": "portrait",
